--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <!-- for lombok -->
                     <!-- remove if crash -->
                     <annotationProcessorPaths>
                         <path>
